--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
 <a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
 
 <blockquote>
-<p>Warning:There is not any form of English support.Contents in Chinese will always be displayed.
-<a href="http://clzls.blog.163.com">前往网易博客</a>
-<a href="http://clzls00.isitestar.cn">前往iSiteStar博客</a></p>
+  <p>Warning:There is not any form of English support.Contents in Chinese will always be displayed.</p>
+  <p><a href="http://clzls.blog.163.com">Go To 163 blog 前往网易博客</a></p>
+  <p><a href="http://clzls00.isitestar.vip/">Go To iSiteStar website 前往iSiteStar博客</a></p>
 </blockquote>
 
 <p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here <a href="https://guides.github.com/features/mastering-markdown/">using GitHub Flavored Markdown</a>, select a template crafted by a designer, and publish. After your page is generated, you can check out the new <code>gh-pages</code> branch locally. If you’re using GitHub Desktop, simply sync your repository and you’ll see the new branch.</p>
