--- a/index.html
+++ b/index.html
@@ -9,14 +9,13 @@
 		<link rel="author" href="humans.txt" />
 		<link rel="stylesheet" href="stylesheets/stylesheet.css" media="screen" />
 		<link rel="stylesheet" href="stylesheets/github-dark.css" />
+		
 		<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
 		<script type="text/javascript" src="javascripts/script.js"></script>
 
 		<title>clzls.GitHub.io</title>
-		<meta name="description" content="blog test" />
-
+		<meta name="description" content="a blog test" />
 		<meta name="viewport" content="width=device-width,initial-scale=1" />
-
 	</head>
 
 	<body>
@@ -26,18 +25,17 @@
 				<h1 class="title">clzls.GitHub.io</h1>
 			</header>
 			<div id="container">
-				<p class="tagline">blog test</p>
+				<p class="tagline">A blog test</p>
 				<div id="main" role="main">
 					<div class="download-bar">
-						<div class="inner">
-							<a href="https://github.com/clzls" class="code">View clzls.GitHub.io on GitHub</a>
-						</div>
+						<div class="inner"><a href="https://github.com/clzls" class="code">View clzls.GitHub.io on GitHub</a></div>
 						<span class="blc"></span>
 						<span class="trc"></span>
 					</div>
 					<article class="markdown-body">
 						<h3>
-							<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+							<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to GitHub Pages.
+						</h3>
 
 						<blockquote>
 							<p>Warning:There is not any form of English support currently. Contents in Chinese will always be displayed.</p>
@@ -48,10 +46,11 @@
 						<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here <a href="https://guides.github.com/features/mastering-markdown/">using GitHub Flavored Markdown</a>, select a template crafted by a designer, and publish. After your page is generated, you can check out the new <code>gh-pages</code> branch locally. If you’re using GitHub Desktop, simply sync your repository and you’ll see the new branch.</p>
 
 						<h3>
-							<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Designer Templates</h3>
+							<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Designer Templates
+						</h3>
 
 						<p>We’ve crafted some handsome templates for you to use. Go ahead and click 'Continue to layouts' to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved.</p>
-<!--
+						<!--
 						<h3>
 							<a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Creating pages manually</h3>
 
@@ -59,13 +58,15 @@
 						-->
 
 						<h3>
-							<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Authors and Contributors</h3>
+							<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Authors and Contributors
+						</h3>
 
 						<p>Currently, only me (<a href="https://github.com/clzls" class="user-mention">@clzls</a>) has contributed to this site.</p>
 						<!--<p>You can <a href="https://help.github.com/articles/basic-writing-and-formatting-syntax/#mentioning-users-and-teams" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor’s GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>-->
 
 						<h3>
-							<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Support or Contact</h3>
+							<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Support or Contact
+						</h3>
 
 						<p>Having trouble with Pages? Check out our <a href="https://help.github.com/pages">documentation</a> or <a href="https://github.com/contact">contact support</a> and we’ll help you sort it out.</p>
 					</article>
@@ -74,21 +75,20 @@
 			<footer>
 				<div class="owner">
 
-					<p><a href="https://github.com/clzls" class="avatar"><img src="https://avatars0.githubusercontent.com/u/16474386?v=3&amp;s=60" width="48" height="48"></a>View <a href="https://github.com/clzls">clzls</a> on <a href="https://www.github.com">GitHub</a></p>
+					<p><a href="https://github.com/clzls" class="avatar"><img src="https://avatars0.githubusercontent.com/u/16474386?v=3&amp;s=60" width="48" height="48" /></a>View <a href="https://github.com/clzls">clzls</a> on <a href="https://www.github.com">GitHub</a></p>
 
-					</div>
-					<div class="creds">
-						<small>This page generated using <a href="https://pages.github.com/">GitHub Pages</a><br>theme by <a href="https://twitter.com/jonrohan/">Jon Rohan</a></small>
-						</div>
-					</footer>
 				</div>
-				<div class="current-section">
-					<a href="#top">Scroll to top</a>
-					<a href="https://github.com/clzls/clzls.github.io/tarball/master" class="tar">tar</a><a href="https://github.com/clzls/clzls.github.io/zipball/master" class="zip">zip</a><a href="" class="code">source code</a>
-					<p class="name"></p>
+				<div class="creds">
+					<small>This page generated using <a href="https://pages.github.com/">GitHub Pages</a><br />theme by <a href="https://twitter.com/jonrohan/">Jon Rohan</a></small>
+					<img src="humanstxt-transparent-color.png" alt="Humans.txt" width="88" height="31" />
 				</div>
-
-
-			</body>
-		</html>
-		
+				
+			</footer>
+		</div>
+		<div class="current-section">
+			<a href="#top">Scroll to top</a>
+			<a href="https://github.com/clzls/clzls.github.io/tarball/master" class="tar">tar</a><a href="https://github.com/clzls/clzls.github.io/zipball/master" class="zip">zip</a><a href="" class="code">source code</a>
+			<p class="name"></p>
+		</div>
+	</body>
+</html>
