--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 				</div>
 				<div class="creds">
 					<small>This page generated using <a href="https://pages.github.com/">GitHub Pages</a><br />theme by <a href="https://twitter.com/jonrohan/">Jon Rohan</a></small>
-					<img src="humanstxt-transparent-color.png" alt="Humans.txt" width="88" height="31" />
+					<a href="humans.txt"><img src="humanstxt-transparent-color.png" alt="Humans.txt" width="128" height="31" /></a>
 				</div>
 				
 			</footer>
