--- a/index.html
+++ b/index.html
@@ -9,17 +9,26 @@
 		<link rel="author" href="humans.txt" />
 		<link rel="stylesheet" href="stylesheets/stylesheet.css" media="screen" />
 		<link rel="stylesheet" href="stylesheets/github-dark.css" />
-		
+
 		<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
 		<script type="text/javascript" src="javascripts/script.js"></script>
 
 		<title>clzls.GitHub.io</title>
 		<meta name="description" content="a blog test" />
 		<meta name="viewport" content="width=device-width,initial-scale=1" />
+
+		<!--[if lt IE 9]>
+		  <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js" />
+		<![endif]-->
+
+		<style>
+			header,nav, section,article,footer
+			{border:1px solid grey; margin:5px; padding:8px;}
+			nav ul {margin:0; padding:0;}
+			nav ul li {display:inline; margin:5px;}
+		</style>
 	</head>
-
 	<body>
-
 		<div class="wrapper">
 			<header>
 				<h1 class="title">clzls.GitHub.io</h1>
@@ -74,15 +83,12 @@
 			</div>
 			<footer>
 				<div class="owner">
-
 					<p><a href="https://github.com/clzls" class="avatar"><img src="https://avatars0.githubusercontent.com/u/16474386?v=3&amp;s=60" width="48" height="48" /></a>View <a href="https://github.com/clzls">clzls</a> on <a href="https://www.github.com">GitHub</a></p>
-
 				</div>
 				<div class="creds">
 					<small>This page generated using <a href="https://pages.github.com/">GitHub Pages</a><br />theme by <a href="https://twitter.com/jonrohan/">Jon Rohan</a></small>
 					<a href="humans.txt"><img src="humanstxt-transparent-color.png" alt="Humans.txt" style="width:90px;height:32px" /></a>
 				</div>
-				
 			</footer>
 		</div>
 		<div class="current-section">
