--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
           <article class="markdown-body">
             <h3>
               <a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to GitHub Pages.
+              <a id="catalog" class="anchor" href="catalog.html" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Here is the Catalog.
             </h3>
 
             <blockquote>
