--- a/partical/xkxt/bksxk.html
+++ b/partical/xkxt/bksxk.html
@@ -1,4 +1,4 @@
-<html><head><meta http-equiv="Content-Type" content="text/html; charset=GBK">
+<html><head><meta http-equiv="Content-Type" content="text/html; charset=GB2312">
 <title>青蛙大学首家在线赌场</title>
 
     <meta http-equiv="X-UA-Compatible" content="IE=10">
