--- a/partical/xkxt/xk_res/help_bks.html
+++ b/partical/xkxt/xk_res/help_bks.html
@@ -38,7 +38,7 @@ td {
   <tbody><tr>
     <td valign="top"><table width="722" border="0" cellpadding="0" cellspacing="1" bgcolor="#FFFFFF" style="border-bottom: #A86ABF 1px solid; border-top: #A86ABF 1px solid; border-left: #A86ABF 1px solid; border-right: #A86ABF 1px solid;">
       <tbody><tr>
-        <td height="35" align="center" valign="center" bgcolor="white"><span class="copyright_zi_hui">&nbsp;&nbsp;&nbsp;&nbsp;<span class="help_title"><font color="red" size="5">建议使用IE、Firefox浏览器进行选、退课操作</font></span></span></td>
+        <td height="35" align="center" valign="center" bgcolor="white"><span class="copyright_zi_hui">&nbsp;&nbsp;&nbsp;&nbsp;<span class="help_title"><font color="red" size="5">建议使用IE、Firefox浏览器进行下、退注操作</font></span></span></td>
       </tr>
 </tbody></table>  	
   	
@@ -64,41 +64,41 @@ td {
             <td height="32" align="left" valign="top" bgcolor="#F0F9FF" class="copyright_hui1"><table width="100%" border="0" cellspacing="3" cellpadding="2">
                 <tbody><tr>
                   <td colspan="2" valign="top" class="copyright_hui11"><span class="help_title">一、下注机制介绍：</span><br>
-                    &nbsp;&nbsp; 本科生下注主要分为三个阶段：下注报名阶段、下注调整阶段、学期中退课阶段。 <br>
-                    &nbsp;&nbsp; 在下注报名阶段，学生下注不受课容量限制，同学们可根据自己对课程的下注意愿填报志愿，并根据网上发布的各课程志愿填报情况及时调整自己的志愿等级；在下注报名结束后，对于报名人数超过课容量的课程，下注系统根据学生当学期教学计划和志愿等级完成后台随机抽签。 <br>
-                    &nbsp;&nbsp; 在下注调整阶段，学生可在课容量范围内采用先选先得的方式下注（含二级下注）。 <br>
-                    &nbsp;&nbsp; 在退课阶段，学生只能退课，不能下注。 </td>
+                    &nbsp;&nbsp; 本科生下注主要分为三个阶段：下注报名阶段、下注调整阶段、学期中退注阶段。 <br>
+                    &nbsp;&nbsp; 在下注报名阶段，学生下注不受赌注容量限制，同学们可根据自己对赌注的下注意愿填报志愿，并根据网上发布的各赌注志愿填报情况及时调整自己的志愿等级；在下注报名结束后，对于报名人数超过赌注容量的赌注，下注系统根据学生当学期教学计划和志愿等级完成后台随机抽签。 <br>
+                    &nbsp;&nbsp; 在下注调整阶段，学生可在赌注容量范围内采用先选先得的方式下注（含二级下注）。 <br>
+                    &nbsp;&nbsp; 在退注阶段，学生只能退赌注，不能下注。 </td>
                 </tr>
                 <tr>
                   <td valign="top" class="copyright_hui11"><p><span class="help_title">二、	志愿填报规则：</span><br>
-                    &nbsp;&nbsp; 本科生下注界面共设了五个下注页面。首先根据培养方案分设了必修课、限选课、任选课三个下注页面，另外还单设了体育课、重修课两个下注页面。在必修课和限选课页面中，分别列出学生当学期教学计划中开设的必修、限选课程；在任选课、体育课页面中，学生可利用界面上提供的多种查询条件进行模糊课程查询；在重修课页面中，列示出学生尚不及格且当学期有开课的课程。
-                    在下注报名阶段，本科生的必修课、限选课、任选课、体育课页面各分设三个志愿等级，其中本科生任选课页面增设优先志愿，当学生符合课程的优先下注条件时，系统会自动将其志愿调整为优先志愿。重修课下注不需要填报志愿。
-                    各志愿等级均有一定的下注门数限制，原则上第一志愿（最高志愿）可填报1门课程，第二志愿可填报1门课程，第三志愿（最低志愿）可填报n门课程。每门课程只限填报一次志愿；体育课允许填报同一门课程的不同课堂。 <br>
+                    &nbsp;&nbsp; 本科生下注界面共设了五个下注页面。首先根据培养方案分设了必修赌注、限选赌注、任选赌注三个下注页面，另外还单设了体育赌注、重修赌注两个下注页面。在必修赌注和限选赌注页面中，分别列出学生当学期教学计划中开设的必修、限选赌注；在任选赌注、体育赌注页面中，学生可利用界面上提供的多种查询条件进行模糊赌注查询；在重修赌注页面中，列示出学生尚不获利且当学期有开赌的赌注。
+                    在下注报名阶段，本科生的必修赌注、限选赌注、任选赌注、体育赌注页面各分设三个志愿等级，其中本科生任选赌注页面增设优先志愿，当学生符合赌注的优先下注条件时，系统会自动将其志愿调整为优先志愿。重修赌注下注不需要填报志愿。
+                    各志愿等级均有一定的下注门数限制，原则上第一志愿（最高志愿）可填报1门赌注，第二志愿可填报1门赌注，第三志愿（最低志愿）可填报n门赌注。每门赌注只限填报一次志愿；体育赌注允许填报同一门赌注的不同赌间。 <br>
                     <span class="help_title">三、	下注学分限制：</span><br>
                     &nbsp;
-                    在下注报名阶段，本科生除体育课和重修课以外的下注总学分不得超过最高下注学分限制（暂定为32学分）；
+                    在下注报名阶段，本科生除体育赌注和重修赌注以外的下注总学分不得超过最高下注学分限制（暂定为32学分）；
                     在下注调整阶段，本科生下注不再有最高下注学分限制。
                   </p></td>
                   
                 </tr>
                 <tr>
-                  <td colspan="2" valign="top" class="copyright_hui11"><p class="help_title">四、志愿填报情况查询和课余量查询：</p>
+                  <td colspan="2" valign="top" class="copyright_hui11"><p class="help_title">四、志愿填报情况查询和赌注余量查询：</p>
                       
-                    <p align="left">在下注报名期间，下注系统将按照设定好的时间点自动统计并发布各课程的志愿填报情况，学生可在“赌前须知”中的“下注意向情况查询”中查看相关信息，并及时调整自己的下注志愿等级。为避免下注后期高峰现象，在下注的最后半天内不再发布下注意向情况。<br>
-                      在下注调整阶段，学生只能选择尚有课余量的课程，赌注的余量情况可在“赌前须知”中的“下注计划查询”中查看。</p></td>
+                    <p align="left">在下注报名期间，下注系统将按照设定好的时间点自动统计并发布各赌注的志愿填报情况，学生可在“赌前须知”中的“下注意向情况查询”中查看相关信息，并及时调整自己的下注志愿等级。为避免下注后期高峰现象，在下注的最后半天内不再发布下注意向情况。<br>
+                      在下注调整阶段，学生只能选择尚有赌注余量的赌注，赌注的余量情况可在“赌前须知”中的“下注计划查询”中查看。</p></td>
                 </tr>
               </tbody></table>
                 <table width="100%" border="0" cellspacing="3" cellpadding="2">
                   <tbody><tr>
-                    <td valign="top" class="copyright_hui11"><p><span class="help_title">五、选课优先级计算规则：</span> <br>
-                      在选课报名结束后，对于报名人数超过课容量的课程，选课系统根据学生的选课优先级顺序进行后台抽签。
-                      本科生一般课程的选课优先级是根据学生选课学期教学计划中的课程属性和填报志愿等级确定的，下注优先级由高至低依次为：必修第一、二、三志愿；限选第一、二、三志愿；任选优先志愿、任选第一、二、三志愿。
-                      本科生体育课的下注优先级是根据填报志愿等级确定的，高志愿课程一旦选中，则低志愿课程自动删除。</p></td>
+                    <td valign="top" class="copyright_hui11"><p><span class="help_title">五、下注优先级计算规则：</span> <br>
+                      在下注报名结束后，对于报名人数超过赌注容量的赌注，下注系统根据学生的下注优先级顺序进行后台抽签。
+                      本科生一般赌注的下注优先级是根据学生下注学期发放赌注计划中的赌注属性和填报志愿等级确定的，下注优先级由高至低依次为：必修第一、二、三志愿；限选第一、二、三志愿；任选优先志愿、任选第一、二、三志愿。
+                      本科生体育赌注的下注优先级是根据填报志愿等级确定的，高志愿赌注一旦选中，则低志愿赌注自动删除。</p></td>
                     <td width="300" align="center"><img src="./help_bks_files/help_3.jpg"></td>
                   </tr>
                   <tr>
                     <td valign="top" class="copyright_hui11"><span class="help_title">六、	多学期交叉下注： </span><br>
-                      自2008年11月开始，学生下注包含秋、春、夏三个学期的课程，学生在登录下注界面时，首先应慎重选择下注的学年学期。</td>
+                      自2017年11月开始，学生下注包含秋、春、夏三个学期的赌注，学生在登录下注界面时，首先应慎重选择下注的学年学期。</td>
 
                   </tr>
               </tbody></table></td>
@@ -114,6 +114,7 @@ td {
 	<tbody><tr>
 		<td height="30" align="center" bgcolor="#eabdf4" class="copyright_shadow"> 
 			2017&#169; &nbsp;青蛙大学注册中心 版权所有 
+			本网站为洋葱网站，没有实际功能。
 		</td>
 	</tr>
 </tbody></table>
