--- a/partical/xkxt/xk_res/help_bks.html
+++ b/partical/xkxt/xk_res/help_bks.html
@@ -1,5 +1,3 @@
-
-<!-- saved from url=(0052)http://zhjwxk.cic.tsinghua.edu.cn/help/help_bks.html -->
 <html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF8">
 <title></title>
 
@@ -20,13 +18,8 @@ td {
 }
 -->
 </style>
-<style></style><style type="text/css"></style><meta name="wecite_data" id="wecite-data" content="{&quot;Title&quot;:&quot;&quot;,&quot;Author&quot;:&quot;&quot;,&quot;Abstract&quot;:&quot;&quot;,&quot;Image&quot;:&quot;&quot;,&quot;Keywords&quot;:&quot;&quot;,&quot;src_likes&quot;:&quot;0&quot;,&quot;src_shares&quot;:&quot;0&quot;,&quot;src_comments&quot;:&quot;0&quot;,&quot;src_reads&quot;:&quot;0&quot;,&quot;src_up&quot;:&quot;0&quot;,&quot;src_down&quot;:&quot;0&quot;,&quot;DateTime&quot;:&quot;2017-12-18 17:50:30&quot;,&quot;Reference Type&quot;:&quot;Web Page&quot;,&quot;Year&quot;:2017,&quot;SiteType&quot;:&quot;c3&quot;,&quot;URL&quot;:&quot;http://zhjwxk.cic.tsinghua.edu.cn/help/help_bks.html&quot;}"></head>
-
+</head>
 <body class="infoBody">
-
-
-
-
 <div id="isShow"><div class="dqwz" id="pathTd"></div></div>
 <div class="window_side" id="pathTd">
   	<div class="window_title_yuan" id="window_title">
@@ -46,17 +39,17 @@ td {
   <tbody><tr>
     <td valign="top"><table width="722" border="0" cellpadding="0" cellspacing="1" bgcolor="#FFFFFF" style="border-bottom: #A86ABF 1px solid; border-top: #A86ABF 1px solid; border-left: #A86ABF 1px solid; border-right: #A86ABF 1px solid;">
       <tbody><tr>
-        <td height="35" align="left" valign="top" bgcolor="#EEE3F9"><span class="copyright_zi_hui">&nbsp;&nbsp;&nbsp;&nbsp;<span class="help_title">新的下注系统改进了下注机制，采用志愿法下注模式，实现了本研通下注，支持秋、春、夏多学期教学活动的交叉运行。</span></span></td>
+        <td height="35" align="left" valign="top" bgcolor="#EEE3F9"><span class="copyright_zi_hui">&nbsp;&nbsp;&nbsp;&nbsp;<span class="help_title">新的下注系统改进了下注机制，采用志愿法下注模式，实现了本研通下注，支持秋、春、夏多学期下注活动的交叉运行。</span></span></td>
       </tr>
     </tbody></table>
         <table width="722" border="0" cellspacing="0" cellpadding="0">
           <tbody><tr>
             <td height="5"><table width="726" border="0" cellpadding="0" cellspacing="0" class="shadow">
                 <tbody><tr>
-                  <td height="4"><img src="./help_bks_files/spacer.gif" width="1" height="1"></td>
+                  <td height="4"></td>
                 </tr>
               </tbody></table>
-                <img src="./help_bks_files/spacer.gif" width="1" height="1"></td>
+                </td>
           </tr>
         </tbody></table>
       <table width="722" border="0" cellpadding="0" cellspacing="1" bgcolor="#FFFFFF" style="border-bottom: #c2cfdf 1px solid; border-top: #c2cfdf 1px solid; border-left: #c2cfdf 1px solid; border-right: #c2cfdf 1px solid;">
@@ -82,7 +75,7 @@ td {
                   
                 </tr>
                 <tr>
-                  <td colspan="2" valign="top" class="copyright_hui11"><p class="help_title">四、志愿填报情况查询和赌注余量查询：</p>
+                  <td valign="top" class="copyright_hui11"><p class="help_title">四、志愿填报情况查询和赌注余量查询：</p>
                       
                     <p align="left">在下注报名期间，下注系统将按照设定好的时间点自动统计并发布各赌注的志愿填报情况，学生可在“赌前须知”中的“下注意向情况查询”中查看相关信息，并及时调整自己的下注志愿等级。为避免下注后期高峰现象，在下注的最后半天内不再发布下注意向情况。<br>
                       在下注调整阶段，学生只能选择尚有赌注余量的赌注，赌注的余量情况可在“赌前须知”中的“下注计划查询”中查看。</p></td>
@@ -94,12 +87,10 @@ td {
                       在下注报名结束后，对于报名人数超过赌注容量的赌注，下注系统根据学生的下注优先级顺序进行后台抽签。
                       本科生一般赌注的下注优先级是根据学生下注学期发放赌注计划中的赌注属性和填报志愿等级确定的，下注优先级由高至低依次为：必修第一、二、三志愿；限选第一、二、三志愿；任选优先志愿、任选第一、二、三志愿。
                       本科生体育赌注的下注优先级是根据填报志愿等级确定的，高志愿赌注一旦选中，则低志愿赌注自动删除。</p></td>
-                    <td width="300" align="center"><img src="./help_bks_files/help_3.jpg"></td>
                   </tr>
                   <tr>
                     <td valign="top" class="copyright_hui11"><span class="help_title">六、	多学期交叉下注： </span><br>
                       自2017年11月开始，学生下注包含秋、春、夏三个学期的赌注，学生在登录下注界面时，首先应慎重选择下注的学年学期。</td>
-
                   </tr>
               </tbody></table></td>
           </tr>
@@ -107,9 +98,6 @@ td {
   </tr>
 </tbody></table>
   
-
-
-
 <table width="100%" border="0" cellspacing="0" cellpadding="0">
 	<tbody><tr>
 		<td height="30" align="center" bgcolor="#eabdf4" class="copyright_shadow"> 
@@ -118,7 +106,5 @@ td {
 		</td>
 	</tr>
 </tbody></table>
-
-
-
-</td></tr></tbody></table></div></div><audio controls="controls" style="display: none;"></audio><script type="text/javascript" src="chrome-extension://jofjnbepnhcbfnpbhchillofcgpeopaj/js/public/common.js"></script><script type="text/javascript" src="chrome-extension://jofjnbepnhcbfnpbhchillofcgpeopaj/js/common/we-general.js"></script></body><style type="text/css">#yddContainer{display:block;font-family:Microsoft YaHei;position:relative;width:100%;height:100%;top:-4px;left:-4px;font-size:12px;border:1px solid}#yddTop{display:block;height:22px}#yddTopBorderlr{display:block;position:static;height:17px;padding:2px 28px;line-height:17px;font-size:12px;color:#5079bb;font-weight:bold;border-style:none solid;border-width:1px}#yddTopBorderlr .ydd-sp{position:absolute;top:2px;height:0;overflow:hidden}.ydd-icon{left:5px;width:17px;padding:0px 0px 0px 0px;padding-top:17px;background-position:-16px -44px}.ydd-close{right:5px;width:16px;padding-top:16px;background-position:left -44px}#yddKeyTitle{float:left;text-decoration:none}#yddMiddle{display:block;margin-bottom:10px}.ydd-tabs{display:block;margin:5px 0;padding:0 5px;height:18px;border-bottom:1px solid}.ydd-tab{display:block;float:left;height:18px;margin:0 5px -1px 0;padding:0 4px;line-height:18px;border:1px solid;border-bottom:none}.ydd-trans-container{display:block;line-height:160%}.ydd-trans-container a{text-decoration:none;}#yddBottom{position:absolute;bottom:0;left:0;width:100%;height:22px;line-height:22px;overflow:hidden;background-position:left -22px}.ydd-padding010{padding:0 10px}#yddWrapper{color:#252525;z-index:10001;background:url(chrome-extension://eopjamdnofihpioajgfdikhhbobonhbb/ab20.png);}#yddContainer{background:#fff;border-color:#4b7598}#yddTopBorderlr{border-color:#f0f8fc}#yddWrapper .ydd-sp{background-image:url(chrome-extension://eopjamdnofihpioajgfdikhhbobonhbb/ydd-sprite.png)}#yddWrapper a,#yddWrapper a:hover,#yddWrapper a:visited{color:#50799b}#yddWrapper .ydd-tabs{color:#959595}.ydd-tabs,.ydd-tab{background:#fff;border-color:#d5e7f3}#yddBottom{color:#363636}#yddWrapper{min-width:250px;max-width:400px;}</style></html>
+</td></tr></tbody></table></div></div><audio controls="controls" style="display: none;"></audio></body>
+<style type="text/css">#yddContainer{display:block;font-family:Microsoft YaHei;position:relative;width:100%;height:100%;top:-4px;left:-4px;font-size:12px;border:1px solid}#yddTop{display:block;height:22px}#yddTopBorderlr{display:block;position:static;height:17px;padding:2px 28px;line-height:17px;font-size:12px;color:#5079bb;font-weight:bold;border-style:none solid;border-width:1px}#yddTopBorderlr .ydd-sp{position:absolute;top:2px;height:0;overflow:hidden}.ydd-icon{left:5px;width:17px;padding:0px 0px 0px 0px;padding-top:17px;background-position:-16px -44px}.ydd-close{right:5px;width:16px;padding-top:16px;background-position:left -44px}#yddKeyTitle{float:left;text-decoration:none}#yddMiddle{display:block;margin-bottom:10px}.ydd-tabs{display:block;margin:5px 0;padding:0 5px;height:18px;border-bottom:1px solid}.ydd-tab{display:block;float:left;height:18px;margin:0 5px -1px 0;padding:0 4px;line-height:18px;border:1px solid;border-bottom:none}.ydd-trans-container{display:block;line-height:160%}.ydd-trans-container a{text-decoration:none;}#yddBottom{position:absolute;bottom:0;left:0;width:100%;height:22px;line-height:22px;overflow:hidden;background-position:left -22px}.ydd-padding010{padding:0 10px}#yddWrapper{color:#252525;z-index:10001;background:url(chrome-extension://eopjamdnofihpioajgfdikhhbobonhbb/ab20.png);}#yddContainer{background:#fff;border-color:#4b7598}#yddTopBorderlr{border-color:#f0f8fc}#yddWrapper .ydd-sp{background-image:url(chrome-extension://eopjamdnofihpioajgfdikhhbobonhbb/ydd-sprite.png)}#yddWrapper a,#yddWrapper a:hover,#yddWrapper a:visited{color:#50799b}#yddWrapper .ydd-tabs{color:#959595}.ydd-tabs,.ydd-tab{background:#fff;border-color:#d5e7f3}#yddBottom{color:#363636}#yddWrapper{min-width:250px;max-width:400px;}</style></html>
