Commit #2 on commandline.

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             </h3>
 
             <blockquote>
-              <p>Warning:There is not any form of English support currently. Contents in Chinese will always be displayed.</p>
+              <p>Warning: There is not any form of English support currently. Contents in Chinese will always be displayed.</p>
               <p><a href="http://clzls.blog.163.com">Go To 163 blog 前往网易博客</a></p>
               <p><a href="http://clzls00.isitestar.vip/">Go To iSiteStar website 前往iSiteStar博客</a></p>
             </blockquote>
@@ -76,7 +76,7 @@
         </div>
         <div class="creds">
           <small>This page generated using <a href="https://pages.github.com/">GitHub Pages</a><br />theme by <a href="https://twitter.com/jonrohan/">Jon Rohan</a></small>
-          <a href="humans.txt"><img src="humanstxt-transparent-color.png" alt="Humans.txt" style="width:90px;height:32px" /></a>
+          <a href="humans.txt"><img src="images/human-alphaC.png" alt="humans.txt" style="width:90px;height:32px" /></a>
         </div>
       </footer>
     </div>
