--- a/index.html
+++ b/index.html
@@ -47,9 +47,12 @@
             </h3>
 
             <blockquote>
-              <p>Warning: There is not any form of English support currently. Contents in Chinese will always be displayed.</p>
-              <p><a href="http://clzls.blog.163.com">Go To 163 blog 前往网易博客</a></p>
-              <p><a href="http://clzls00.isitestar.vip/">Go To iSiteStar website 前往iSiteStar博客</a></p>
+              <p>These two blogs were written in Chinese.</p>
+              <p><a href="http://clzls.blog.163.com">163 blog 网易博客</a></p>
+              <p><a href="http://clzls00.isitestar.vip/">iSiteStar blog</a></p>
+              <p />
+              <p><a href="http://wpa.qq.com/msgrd?v=3&uin=2862802117&site=qq&Menu=yes">Tencent QQ: 286_280_2117</a></p>
+              <p>Mail: myad#live.cn (REPLACE # WITH @)</p>
             </blockquote>
 
             <!--
