Adding Fr24 banner

--- a/index.html
+++ b/index.html
@@ -43,17 +43,20 @@
           <article class="markdown-body">
             <h3>
               <a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to GitHub Pages.
-              <a id="catalog" class="anchor" href="catalog.html" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Here is the Catalog.
+              <!---<a id="catalog" class="anchor" href="catalog.html" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Here is the Catalog.-->
             </h3>
 
+            <p>Contents may be written in English, 中文(Chinese), 日本語(Japanese) or sometimes Dansk (Danish).</p>
+
             <blockquote>
-              <p>These two blogs were written in Chinese.</p>
-              <p><a href="http://clzls.blog.163.com">163 blog 网易博客</a></p>
-              <p><a href="http://clzls00.isitestar.vip/">iSiteStar blog</a></p>
-              <p />
-              <p><a href="http://wpa.qq.com/msgrd?v=3&uin=2862802117&site=qq&Menu=yes">Tencent QQ: 286_280_2117</a></p>
+              <p><a href="http://clzls.blog.163.com">163 blog 网易博客 (Chinese only. CLOSED and no updates since 2018)</a></p>
+              <p><a href="http://clzls00.isitestar.vip/">iSiteStar blog (Multiple language but not complete)</a></p>
+              <p>Tencent QQ: 286_280_2117</p>
+              <p>Chats via <a href="https://keybase.io">Keybase</a> is also accepted.</p>
               <p>Mail: myad#live.cn (REPLACE # WITH @)</p>
             </blockquote>
+
+            <p><a href="https://my.flightradar24.com/firetimer"><img src="https://banners-my.flightradar24.com/firetimer.png" alt="My Flightdiary.net profile" /></a></p>
 
             <!--
             Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
