--- a/index.html
+++ b/index.html
@@ -58,10 +58,14 @@
 
             <p><a href="https://my.flightradar24.com/firetimer"><img src="https://banners-my.flightradar24.com/firetimer.png" alt="My Flightdiary.net profile" /></a></p>
 
-            <!--
-            Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
-            -->
+            <h3>
+              <a id="available-contents" class="anchor" href="#available-contents" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Available Contents
+            </h3>
 
+            <p xmlns:dct="http://purl.org/dc/terms/" xmlns:cc="http://creativecommons.org/ns#" class="license-text">When not declared explicitly, all these documents are licensed under CC BY-NC 4.0<a href="https://creativecommons.org/licenses/by-nc/4.0"><img style="height:22px!important;margin-left: 3px;vertical-align:text-bottom;" src="https://search.creativecommons.org/static/img/cc_icon.svg" /><img  style="height:22px!important;margin-left: 3px;vertical-align:text-bottom;" src="https://search.creativecommons.org/static/img/cc-by_icon.svg" /><img  style="height:22px!important;margin-left: 3px;vertical-align:text-bottom;" src="https://search.creativecommons.org/static/img/cc-nc_icon.svg" /></a></p>
+            <p><a href="/rail/tktmach_latest.html">中国铁路售票机综合统计(Chinese only)</a></p>
+            <p><a href="/rail/票机综合统计202005101.mdx">票机综合统计 Mdict 下载(Chinese only)</a></p>
+            
             <h3>
               <a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Authors and Contributors
             </h3>
