--- a/rail/tktMach202005101.html
+++ b/rail/tktMach202005101.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html><html lang="zh">
 <head><meta http-equiv="Content-Type" content="text/html; charset=utf-8" /><title>票机统计表 20200510 第 1 版</title></head>
 <body><div>温馨提示：图片可以右键后选择“新标签页打开”查看大图（IE除外），手机可以双指放大查看！</div>
+<a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/"><img alt="知识共享许可协议" style="border-width:0" src="https://i.creativecommons.org/l/by-nc/4.0/88x31.png" /></a><br />本作品采用<a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/">知识共享署名-非商业性使用 4.0 国际许可协议</a>进行许可。
 <div>
     <p>
         推荐使用Mdict词典，官方网站：
