--- a/rail/tktmach_latest.html
+++ b/rail/tktmach_latest.html
@@ -14,5 +14,6 @@
 
 <p>如果超过 5 秒后您仍然看到本消息，请点击上面的链接。</p>
 
+<a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/"><img alt="知识共享许可协议" style="border-width:0" src="https://i.creativecommons.org/l/by-nc/4.0/88x31.png" /></a><br />本作品采用<a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/">知识共享署名-非商业性使用 4.0 国际许可协议</a>进行许可。
 </body>
 </html>
