--- a/rail/tktMach202006141.html
+++ b/rail/tktMach202006141.html
@@ -17,8 +17,9 @@
         <a href="./打票手册202005201.mdx">点击下载词典</a>
     </p>
     <p>
-        看唔习惯？<a href="./tktMach202005301.html">切换版本</a>
-        <a href="./tktMach202005201.html">回到上次更新</a>
+        看不习惯？
+        <a href="./tktMach202006141.html">列表版本</a>
+        <a href="./tktMach202006142.html">条目版本</a>
     </p>
     
     <a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/"><img alt="知识共享许可协议" style="border-width:0;" src="./ccbync.png" /></a><br />
