--- a/rail/tktmach_latest.html
+++ b/rail/tktmach_latest.html
@@ -2,12 +2,13 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<meta http-equiv="Refresh" content="3;url=./tktMach202006142.html" />
+<meta http-equiv="Refresh" content="3;url=tktMach202007032.html" />
+<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 </head>
 
 <body>
 <p>
-我们将重定向至 <a href="./tktMach202006142.html">tktMach202006142.html</a>
+我们将重定向至 <a href="./tktMach202007032.html">tktMach202007032.html</a>
 </p>
 
 <p>您将在 3 秒内被重定向到新的地址。</p>
