--- a/rail/tktAbout.html
+++ b/rail/tktAbout.html
@@ -207,6 +207,14 @@
       <p class="text-muted" lang="en">Reminder: Minor changes (including, but not limited to, new content cards or minor page changes) may not be listed here.</p>
       <ul class="list-group">
         <li class="list-group-item border border-primary">
+          2021-04-12(v2.3.4)
+          <ul>
+            <li>
+              新增车站：<var>黄石</var>
+            </li>
+          </ul>
+        </li>
+        <li class="list-group-item">
           2021-04-05(v2.3.3)
           <ul>
             <li>
