--- a/rail/tktAbout.html
+++ b/rail/tktAbout.html
@@ -61,23 +61,11 @@
     <p>5位车站号+2位售票方式号+3位售票窗口号</p>
     <p>售票机的窗口号可以从屏幕最底下获得。售票窗口的窗口号一般悬挂在窗口上，除非有特殊声明。</p>
   </div>
-  <script>
-    sub_tkt = getTktType;
-    function preset_date() {
-      // document.getElementById('tktdate').value = today;
-      tktpaperdesc = document.getElementById('tktpaperdesc');
-      tktpaperdesc.innerHTML = "";
-      getTktRange().forEach(element => {
-        tktpaperdesc.innerHTML += "<p>代码" + element.toString() + "：" + sub_tkt(element) + "</p>";
-      });
-
-    }
-  </script>
   <div class="container">
     <h2>运转大数据 ｜ 关于我们</h2>
     <h4 class="text-muted" lang="en">Yùnzhuǎn Dà-shùjù (Big Data for Train Travel in China, YZDSJ or BD4TTC) | About us</h4>
-    <p><span>一个小小的个人网页，正在建设中……如有疑问，请联系管理员。</span><br>
-    <span class="text-muted" lang="en">A brunch of personal web pages, under construction... Any question please contact Kina.</span></p>
+    <p><span>一个小小的个人网页，正在建设中……如有疑问，请联系管理员（前往<a href="#plq">评论区</a>）。</span><br>
+    <span class="text-muted" lang="en">A brunch of personal web pages, under construction... Any question please contact Kina or just <a href="#plq">comment</a> us.</span></p>
     <div class="card">
       <div class="card-header">
         <ul class="nav nav-tabs card-header-tabs" id="TabProf" role="tablist">
@@ -187,13 +175,13 @@
         <tr><td>1</td><td>郑州东</td><td>46</td><td>57</td></tr>
         <tr><td>2</td><td>郑州</td><td>41</td><td>50</td></tr>
         <tr><td>3</td><td>杭州东</td><td>30</td><td>35</td></tr>
-        <tr><td>4</td><td>兰州</td><td>26</td><td>30</td></tr>
-        <tr><td>5</td><td>北京南</td><td>25</td><td>25</td></tr>
-        <tr><td>6</td><td>兰州西</td><td>24</td><td>28</td></tr>
-        <tr><td>7</td><td>天津</td><td>21</td><td>27</td></tr>
-        <tr><td>8</td><td>福州</td><td>20</td><td>27</td></tr>
-        <tr><td>9</td><td>北京</td><td>14</td><td>15</td></tr>
-        <tr><td>10</td><td>合肥</td><td>12</td><td>13</td></tr>
+        <tr><td>4</td><td>北京南</td><td>28</td><td>28</td></tr>
+        <tr><td>5</td><td>兰州</td><td>26</td><td>30</td></tr>
+        <tr><td>6</td><td>福州</td><td>25</td><td>32</td></tr>
+        <tr><td>7</td><td>兰州西</td><td>24</td><td>28</td></tr>
+        <tr><td>8</td><td>天津</td><td>21</td><td>27</td></tr>
+        <tr><td>9</td><td>北京西</td><td>16</td><td>21</td></tr>
+        <tr><td>10</td><td>北京</td><td>15</td><td>16</td></tr>
       </table>
     </div>
     <div class="container">
@@ -207,6 +195,20 @@
       <p class="text-muted" lang="en">Reminder: Minor changes (including, but not limited to, new content cards or minor page changes) may not be listed here.</p>
       <ul class="list-group">
         <li class="list-group-item border border-primary">
+          2021-04-19(v2.3.5)
+          <ul>
+            <li>
+              新增车站：<var>河源</var>、<var>虎门</var>、<var>淮北</var>、<var>漳浦</var>
+            </li>
+            <li>
+              新增车站联合体：<var>衢宁线(线路)</var>
+            </li>
+            <li>
+              车站联合体新增了一些额外数据。
+            </li>
+          </ul>
+        </li>
+        <li class="list-group-item">
           2021-04-12(v2.3.4)
           <ul>
             <li>
@@ -337,7 +339,7 @@
       </ul>
     </div>
   </div>
-  <script>preset_date();</script>
+  <a id="plq"></a>
   <div id="vcomments" class="container"></div>
   <script>
       new Valine({el: '#vcomments',appId: 'VY3q0lDUnkBNoCLciW7W4tCC-gzGzoHsz',appKey: 'RUb9iXuGiAK80y4rc9J2zN65'})
