--- a/rail/tktAbout.html
+++ b/rail/tktAbout.html
@@ -35,7 +35,7 @@
   </nav>
   <div class="container head">
     <p>推荐使用Mdict词典版本，查询更方便。Mdict官方网站：<a href="https://www.mdict.cn/wp/?lang=zh">www.mdict.cn/wp</a></p>
-    <p><a href="./tktMach202103292.mdx"><i class="fas fa-download"></i>下载词典 - 2021 年 03 月 29 日版本</a></p>
+    <p><a href="./tktMach202104262.mdx"><i class="fas fa-download"></i>下载词典 - 2021 年 04 月 26 日版本</a></p>
     <a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/"><img alt="知识共享许可协议" style="border-width:0;" src="./img/ccbync.png" /></a><br />本作品采用<a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/">知识共享署名-非商业性使用 4.0 国际许可协议</a>进行许可。
   </div>
   <div class="container">
@@ -175,13 +175,13 @@
         <tr><td>1</td><td>郑州东</td><td>46</td><td>57</td></tr>
         <tr><td>2</td><td>郑州</td><td>41</td><td>50</td></tr>
         <tr><td>3</td><td>杭州东</td><td>30</td><td>35</td></tr>
-        <tr><td>4</td><td>北京南</td><td>28</td><td>28</td></tr>
+        <tr><td>4</td><td>北京南</td><td>29</td><td>29</td></tr>
         <tr><td>5</td><td>兰州</td><td>26</td><td>30</td></tr>
         <tr><td>6</td><td>福州</td><td>25</td><td>32</td></tr>
         <tr><td>7</td><td>兰州西</td><td>24</td><td>28</td></tr>
         <tr><td>8</td><td>天津</td><td>21</td><td>27</td></tr>
-        <tr><td>9</td><td>北京西</td><td>16</td><td>21</td></tr>
-        <tr><td>10</td><td>北京</td><td>15</td><td>16</td></tr>
+        <tr><td>9</td><td>北京西</td><td>19</td><td>24</td></tr>
+        <tr><td>10</td><td>北京</td><td>16</td><td>17</td></tr>
       </table>
     </div>
     <div class="container">
@@ -193,8 +193,17 @@
       <h4 class="text-muted" lang="ja">Update log 更新日誌</h4>
       <p>内容增加、版式微调等常规更新将不再被列出，敬请注意。</p>
       <p class="text-muted" lang="en">Reminder: Minor changes (including, but not limited to, new content cards or minor page changes) may not be listed here.</p>
+      <p>这是简略的更新日志。更详尽的信息可参考<a class="link" href="helpUpdatehist.html">专门页面</a></p>
+      <p class="text-muted" lang="en">It's a simplified version. For detailed version you may refer to <a class="link" href="helpUpdatehist.html">this page</a>.</p>
       <ul class="list-group">
         <li class="list-group-item border border-primary">
+          2021-04-26(v2.3.6)
+          <ul>
+            <li>新增车站：<var>大冶北</var>、<var>华山北</var></li>
+            <li>新增车站联合体：<var>宝成、成渝线(线路)</var>、<var>昌福线(线路)</var>、<var>成渝高速线(线路)</var>、<var>抚顺线(线路)</var>、<var>广九线(线路)</var>、<var>广深港高速线(线路)</var>、<var>杭深线(线路)</var>、<var>辽宁沈阳(城市)</var>、<var>沈丹客专线(线路)</var></li>
+          </ul>
+        </li>
+        <li class="list-group-item">
           2021-04-19(v2.3.5)
           <ul>
             <li>
@@ -209,45 +218,7 @@
           </ul>
         </li>
         <li class="list-group-item">
-          2021-04-12(v2.3.4)
-          <ul>
-            <li>
-              新增车站：<var>黄石</var>
-            </li>
-          </ul>
-        </li>
-        <li class="list-group-item">
-          2021-04-05(v2.3.3)
-          <ul>
-            <li>
-              新增车站：<var>八达岭长城</var>、<var>海拉尔</var>
-            </li>
-          </ul>
-        </li>
-        <li class="list-group-item">
-          2021-03-29(v2.3.2)
-          <ul>
-            <li>
-              新增车站：<var>吉首</var>、<var>昆山</var>、<var>良乡</var>、<var>麻城</var>、<var>麻城北</var>、<var>沙城</var>、<var>孝感东</var>、<var>延庆</var>
-            </li>
-            <li>
-              新增车站联合体：<var>京津城际线(线路)</var>
-            </li>
-            <li>
-              票机功能信息进行少许调整：可能不支持的功能被忽略
-            </li>
-          </ul>
-        </li>
-        <li class="list-group-item">
-          2021-03-22(v2.3.1)
-          <ul>
-            <li>
-              新增车站：<var>昌平北</var>、<var>大理</var>、<var>峨眉</var>、<var>峨眉山</var>、<var>淮安东</var>、<var>康庄</var>、<var>连云港东</var>、<var>密云北</var>、<var>石门县北</var>、<var>顺义西</var>、<var>燕岗</var>
-            </li>
-            <li>
-              修复：郑焦城际显示错误
-            </li>
-          </ul>
+          ……
         </li>
         <li class="list-group-item">
           2021-03-15(v2.3.0pre OR v2.2.3)
@@ -258,17 +229,7 @@
           </ul>
         </li>
         <li class="list-group-item">
-          2021-03-08(v2.2.2) 妇女节快乐！
-          <ul>
-            <li lang="en">Happy Women's Day!</li>
-            <li>新增车站：<var>成都西</var>、<var>福利区</var>、<var>哈尔滨西</var>、<var>汉中</var>、<var>连云港</var>、<var>渑池南</var>、<var>彭山北</var>、<var>郫县西</var>、<var>深圳机场</var>、<var>雅安</var></li>
-            <li>维护了车站联合体的引导信息。新增的车站联合体有：<var>福平线(线路)</var>、<var>甘肃兰州(城市)</var>、<var>京张高速线(线路)</var></li>
-            <li>优化代码，减少了冗余数据。</li>
-          </ul>
-        </li>
-        <li class="list-group-item">
-          2021-03-02(Version 2021-02-28, v2.2.1):
-          <ul><li>新增车站：<var>大港南</var>、<var>当阳</var>、<var>阜阳</var></li></ul>
+          ……
         </li>
         <li class="list-group-item">
           2021-02-18(v2.2.0pre OR v2.1.3):
@@ -281,28 +242,7 @@
           </ul>
         </li>
         <li class="list-group-item">
-          2021-02-11(v2.1.2) 春节特别版
-          <ul>
-            <li lang="en">Happy Chinese New Year / Lunar New Year!</li>
-            <li>新增车站：<var>仙林</var>、<var>马鞍山东</var>。出于维护历史记录的需要新增的有：<var>武夷山东</var></li>
-            <li>维护了<var>长乐</var>、<var>宁波</var>与<var>福州南</var>的引导信息。</li>
-          </ul>
-        </li>
-        <li class="list-group-item">
-          2021-02-01(v2.1.2):
-          <ul>
-            <li>新增车站：<var>三间房</var>、<var>乌伊岭</var>、<var>伊春</var>、<var>佳木斯</var>、<var>南岔</var>、<var>友好</var>、<var>周家</var>、<var>哈尔滨</var>、<var>哈尔滨东</var>、<var>奎屯</var>、<var>日喀则</var>、<var>朗乡</var>、<var>朱砂古镇</var>、<var>梧州</var>、<var>汤池</var>、<var>浩良河</var>、<var>深圳西</var>、<var>绥化</var>、<var>美溪</var>、<var>西安南</var>、<var>西林</var>、<var>长乐</var>、<var>香兰</var>、<var>齐齐哈尔</var>、<var>齐齐哈尔南</var></li>
-            <li>新增车站资料与车站历史栏目。</li>
-          </ul>
-        </li>
-        <li class="list-group-item">
-          2021-01-23(v2.1.1) 生日特别版:
-          <ul>
-            <li>新增车站：<var>郎溪南</var></li>
-            <li>现在几乎所有车站信息都可以带图片了。</li>
-            <li>添加了醒目的车站编号提示。</li>
-            <li lang="en">Improved English and Japanese guides.</li>
-          </ul>
+          ……
         </li>
         <li class="list-group-item">
           2021-01-16(v2.1.0):
@@ -314,7 +254,7 @@
           </ul>
         </li>
         <li class="list-group-item">
-          20210101(v2.0.0):
+          2021-01-01(v2.0.0):
           <ul>
             <li>引入“红改蓝”、“票机号码与终端号不符”标签。</li>
             <li>版式调整，浏览器互动优化。条目版成为默认项。</li>
@@ -324,14 +264,7 @@
           </ul>
         </li>
         <li class="list-group-item">
-          20201212(v2.0.rc1):
-          <ul>
-            <li>新介绍页面，更新Mdict版。</li>
-            <li>引入“票号标注”标签。</li>
-          </ul>
-        </li>
-        <li class="list-group-item">
-          20201202: 新介绍页面，清河站探访，缩小网页体积。
+          ……
         </li>
         <li class="list-group-item">
           2020-05-10: 首个公开的版本。
