--- a/rail/helpUpdatehist.html
+++ b/rail/helpUpdatehist.html
@@ -55,6 +55,13 @@
       <p class="text-muted" lang="en">A detailed version of update log. Reminder: Minor changes (including, but not limited to, new content cards or minor page changes) may not be listed here.</p>
       <ul class="list-group">
         <li class="list-group-item border border-primary">
+          2021-05-04(v2.3.7)
+          <ul>
+            <li>新增车站：<var>北京大兴</var>、<var>古交</var>、<var>菏泽</var>、<var>黄村</var>、<var>黄山</var>、<var>聊城</var>、<var>灵石</var>、<var>庐江</var>、<var>庐江西</var>、<var>平遥</var>、<var>芜湖</var>、<var>延吉西</var></li>
+            <li>部分数据仍待录入。</li>
+          </ul>
+        </li>
+        <li class="list-group-item">
           2021-04-26(v2.3.6)
           <ul>
             <li>新增车站：<var>大冶北</var>、<var>华山北</var></li>
