--- a/rail/tktAbout.html
+++ b/rail/tktAbout.html
@@ -172,16 +172,16 @@
       <h3>趋势榜</h3><h4 class="text-muted" lang="en">Trend List</h4>
       <table class="table">
         <tr><th>排名</th><th>车站</th><th>机器数</th><th>记录数</th></tr>
-        <tr><td>1</td><td>郑州东</td><td>46</td><td>57</td></tr>
+        <tr><td>1</td><td>郑州东</td><td>46</td><td>58</td></tr>
         <tr><td>2</td><td>郑州</td><td>41</td><td>50</td></tr>
         <tr><td>3</td><td>杭州东</td><td>30</td><td>35</td></tr>
         <tr><td>4</td><td>北京南</td><td>29</td><td>29</td></tr>
         <tr><td>5</td><td>兰州</td><td>26</td><td>30</td></tr>
-        <tr><td>6</td><td>福州</td><td>25</td><td>32</td></tr>
+        <tr><td>6</td><td>福州</td><td>25</td><td>31</td></tr>
         <tr><td>7</td><td>兰州西</td><td>24</td><td>28</td></tr>
         <tr><td>8</td><td>天津</td><td>21</td><td>27</td></tr>
         <tr><td>9</td><td>北京西</td><td>19</td><td>24</td></tr>
-        <tr><td>10</td><td>北京</td><td>16</td><td>17</td></tr>
+        <tr><td>10</td><td>北京</td><td>18</td><td>19</td></tr>
       </table>
     </div>
     <div class="container">
@@ -197,6 +197,13 @@
       <p class="text-muted" lang="en">It's a simplified version. For detailed version you may refer to <a class="link" href="helpUpdatehist.html">this page</a>.</p>
       <ul class="list-group">
         <li class="list-group-item border border-primary">
+          2021-05-04(v2.3.7)
+          <ul>
+            <li>新增车站：<var>北京大兴</var>、<var>古交</var>、<var>菏泽</var>、<var>黄村</var>、<var>黄山</var>、<var>聊城</var>、<var>灵石</var>、<var>庐江</var>、<var>庐江西</var>、<var>平遥</var>、<var>芜湖</var>、<var>延吉西</var></li>
+            <li>部分数据仍待录入。</li>
+          </ul>
+        </li>
+        <li class="list-group-item">
           2021-04-26(v2.3.6)
           <ul>
             <li>新增车站：<var>大冶北</var>、<var>华山北</var></li>
